--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/about.css">
     <title>The Ultimate Sports Tv</title>
 </head>
-<>
+ 
     <body id="home">
                          
-        <header > 
+        <header class="about"> 
             <div class="navbar" id="navbar">
                 <div class="logo flex-container">
                     <div>
@@ -32,6 +32,7 @@
                 </nav>
             </div>
         </header>
+        
             <div class="slider-container">
                 <div class="left-slide">
                     <div style="background-color: black">
@@ -43,7 +44,7 @@
                     <div style="background-color: #050c2c">
                        <h1>Colin Sexton</h1>
                        <div class="info">
-                         <p>Rising star of the Cleveland Cavaliers. I had a great time meeting him!</p>
+                         <p class="special">Rising star of the Cleveland Cavaliers. I had a great time meeting him!</p>
                        </div> 
                     </div>
                     <div style="background-color: rgb(214, 176, 126)">
@@ -55,19 +56,19 @@
                     <div style="background-color: #b91515">
                             <h1>Mom & Dad</h1>
                             <div class="info">
-                                <p>Love these guys! They always give me their full support.</p>
+                                <p class="special">Love these guys! They always give me their full support.</p>
                             </div>
                         </div>
                     <div style="background-color: #252e33">
                        <h1>The Three Of Us</h1>
                        <div class="info">
-                           <p>These are my brothers Marquis and Marlon.  We argue a LOT!! But, we love each other way more than we argue.</p>
+                           <p>These are my brothers Marquis & Marlon.  We argue a LOT!! But, we love each other way more than we argue.</p>
                        </div>
                     </div>
                     <div style="background-color: #348acf">
                        <h1>Maliq Shamir Hicks</h1>
                        <div class="info">
-                           <p>I started The Ultimate Sports TV in 2018.  I love sports, and I love talking about sports, so I decided to share my love with other sports fans.  Be sure to check out my YouTube channel @ youtube.com/c/TheUltimateSportsTVSquad/featured </p>
+                           <p class="special" id="special">I started The Ultimate Sports TV in 2018.  I love sports, and I love talking about sports, so I decided to share my love with other sports fans.  Be sure to check out my YouTube channel @ <a href="https://www.youtube.com/channel/UCyDt2w9OWVCk6gEqWBVT63w/channels">TheUltimateSportsTV</a></p>
                        </div>
                     </div>
                 </div>
@@ -75,7 +76,7 @@
                     <div style="background-image: url('images/maliqabout.jpg')"></div>
                     <div style="background-image: url('images/threebrothers.jpg')"></div>
                     <div class="momanddad" style="background-image: url('images/momdad.jpg')"></div>
-                    <div class="brothersacting" style="background-image: url('images/brothersacting2.PNG')"></div>
+                    <div class="brothersacting" style="background-image: url('images/brothersacting2.png')"></div>
                     <div class="sexton" style="background-image: url('images/sexton.jpeg')"></div>
                     <div class="maliqmask" style="background-image: url('images/maliqmask2.jpg')"></div>
               </div>
