--- a/about.html
+++ b/about.html
@@ -73,8 +73,8 @@
                     </div>
                 </div>
                 <div class="right-slide">
-                    <div style="background-image: url('images/maliqabout.jpg')"></div>
-                    <div style="background-image: url('images/threebrothers.jpg')"></div>
+                    <div class="maliqabout" style="background-image: url('images/maliqabout.jpg')"></div>
+                    <div class="threebrothers"style="background-image: url('images/threebrothers.jpg')"></div>
                     <div class="momanddad" style="background-image: url('images/momdad.jpg')"></div>
                     <div class="brothersacting" style="background-image: url('images/brothersacting2.png')"></div>
                     <div class="sexton" style="background-image: url('images/sexton.jpeg')"></div>
