--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <body id="contact">
                
-        <header class="hero-none"> 
+        <header class="hero hero-contact"> 
             <div class="navbar" id="navbar">
                 <div class="logo flex-container">
                     <div>
@@ -30,7 +30,7 @@
                     </ul>
                 </nav>
             </div>
-
+        </header>
             <div class="clr"></div>
 
             <div class="container2">
