updated media, css, and html files

--- a/basketball.html
+++ b/basketball.html
@@ -11,7 +11,7 @@
     <title>The Ultimate Sports Tv</title>
 </head>
 <html>
-    <body id="home">
+    <body id="basketball">
          <header class="hero hero-basketball"> 
             <div class="navbar" id="navbar">
                 <div class="logo flex-container">
