--- a/contact.html
+++ b/contact.html
@@ -35,24 +35,24 @@
 
             <div class="container2">
                 <h1>Contact Me</h1>
-                <form action="mailto:katrinarhicks@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm">
+                <form action="https://formsubmit.co/6c8c94edc5a76b781f1547f053aed106" method="POST">
                     <div>
                         <label for="name" class="label">Name</label>
                     </div>
                     <div>
-                        <input type="text">
+                        <input type="text" name="name">
                     </div>
                     <div>
                         <label for="email" class="email label">Email</label>
                     </div>
                     <div>
-                        <input type="email">
+                        <input type="email" name="email">
                     </div>
                     <div>
                         <label for="message" class="label">Please create your message in the box below.</label>
                     </div>
                     <div>
-                        <textarea name="ContactComment" id="message" cols="70" rows="15" class="message"></textarea>
+                        <textarea type="text" name="message" id="message" cols="70" rows="15" class="message"></textarea>
                     </div>
                     <div>
                         <button class="btn" type="submit">Submit</button>
