--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                     </div>
                 </form>
                 <div class="photo">
-                    <img class="contact-pic" src="/images/maliqabout.JPG" alt="Maliq">
+                    <img class="contact-pic" src="images/maliqabout.jpg" alt="Maliq">
                 </div>
             </div>
             <div class="clr"></div>
