updated email address

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
             <div class="container2">
                 <h1>Contact Me</h1>
-                <form action="https://formsubmit.co/6c8c94edc5a76b781f1547f053aed106" method="POST">
+                <form action="https://formsubmit.co/TheUltimatesportstv@gmail.com" method="POST">
                     <div>
                         <label for="name" class="label">Name</label>
                     </div>
