--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
             <div class="container2">
                 <h1>Contact Me</h1>
-                <form action="process.php" method="POST">
+                <form action="/contact/process.php" method="POST">
                     <div>
                         <label for="name" class="label">Name</label>
                     </div>
