--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property='og:title' content='The Ultimate Sports TV'/>
+    <meta property='og:image' content="images/maliqabout.jpg">
+    <meta property='og:description' content="Maliq Hicks will help you understand today's sports!">
+    <meta property='og:url' content="www.theultimatesportstv.com">  
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
